--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   convex_flutter: ^1.2.0
   http: ^1.5.0
   url_launcher: ^6.3.2
+  uni_links: ^0.5.1
 
 dev_dependencies:
   flutter_test:
