--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.5.0
   url_launcher: ^6.3.2
   uni_links: ^0.5.1
+  flutter_appauth: ^10.0.0
 
 dev_dependencies:
   flutter_test:
