--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "bcryptjs": "^3.0.2",
     "convex": "^1.27.4",
     "google-auth-library": "^10.4.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "resend": "^6.1.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
