--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "ai": "^5.0.76",
     "bcryptjs": "^3.0.2",
     "convex": "^1.27.4",
     "google-auth-library": "^10.4.1",
     "jsonwebtoken": "^9.0.2",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^5.4.296",
+    "reductoai": "^0.12.0",
     "resend": "^6.1.3"
   },
   "devDependencies": {
