--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "lint": "tsc -p convex && eslint . --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.52",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "ai": "^5.0.76",
