--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   convex_flutter: ^1.2.0
   http: ^1.5.0
   url_launcher: ^6.3.2
-  uni_links: ^0.5.1
+  app_links: ^4.0.0
   flutter_appauth: ^10.0.0
   flutter_riverpod: ^2.6.1
   shared_preferences: ^2.5.3
