--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   convex_flutter: ^1.2.0
   http: ^1.5.0
   url_launcher: ^6.3.2
-  uni_links: ^0.5.1
+  app_links: ^6.0.2
+
   flutter_appauth: ^10.0.0
 
 dev_dependencies:
@@ -49,7 +50,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
